# sdr-course

./: LICENSE.md  README.md  external-resources.md  resources.md
classroom_activities/Chx_Misc/Python_curric_2/: .gitignore  010_Python_SDR_download_test.py  010_Python_SDR_intro.py  010_pcdr_download_test.md  020_Python_SDR_intro.py  020_Python_SDR_ook_tx_intro.py  020_pcdr_ook_tx_intro.md  030_Python_SDR_osmocom_send_data_usage_example.py  030_pcdr_ook_waves.md  030_pcdr_ook_waves_1.md  030_pcdr_ook_waves_1_temporary_copy.md  030_pcdr_wave_theory.md  040_pcdr_complexwaves.md  040_pcdr_ook_rx_1.md  040_pcdr_ook_tx_2.md  040_pcdr_wave_gen.py  050_pcdr_ook_rx_1.md  062-todo.md  099_guizero_keypress_test.md  2023_dec_30_flowgraph_process_wrapping.py  2023_dec_30_flowgraph_test_basic.py  2023_dec_30_gui_sink.py  998_pcdr_ook_tx_2.md  999_others.md  brainstorming_about_the_class_2024_march.py  dash_audioplayer_graph.py  data_producer.py  dslkjf.py  ex_2023_dec_30_flowgraph_process_wrapping.py  ex_2023_dec_30_flowgraph_test_basic.py  ex_2023_dec_30_queue_wrapped_blocks.py  experiment_receive_ook.py  flowgraph_test_basic.py  generate_weirdness.py  how_to_install.txt  jt2.py  justtesting.py  justtesting2.grc  justtesting2.py  justtesting_2024_01_11.py  (+9 more)
classroom_activities/Chx_Misc/Python_curric_2/extra/: 2024_04_15__Demo_during_phone_call.py  README.md  ex_2023_dec_30_flowgraph_test_basic.py  ex_2023_dec_30_gui_sink.py  experiment_receive_ook.py  justtesting_2024_01_11.py  justtesting_2024_01_11_again.py  justtesting_3.py  long-term-random-ideas.py  ook_mini_content.iqdata
(+542 files in other folders)
